# openhome

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  ITERATION_1.txt  ITERATION_2.txt  ITERATION_3.txt  ITERATION_4.txt  ITERATION_5.txt  LICENSE  README-cn.md  README-en.md  README.md  TEAM.md  app.py  astro.config.mjs  comments.db  comments.py  config.example.yaml  enhance_1.txt  enhance_2.txt  enhance_3.txt  enhance_4.txt  enhance_5.txt  iter_1.txt  iter_2.txt  iter_3.txt  iter_4.txt  iter_5.txt  pyproject.toml  quality.txt  readme_sync.py  requirements.txt  setup.py  stats.db  stats.py
.github/workflows/: deploy.yml
pale-point/: package-lock.json  package.json
src/: consts.ts
src/content/blog/: ai-agent-architecture.md  openclaw-getting-started.md
src/pages/: index.astro
templates/: index.html  index.html.bak
tools/: github_issues.py  github_prs.py  github_search.py  github_stats.py  github_trending.py  github_webhooks.py
