[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openhome"
version = "1.0.0"
description = "A modern personal homepage with GitHub integration, RSS feeds, and smart theme colors"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "stlin256's OpenClaw", email = "yjzlxljy@outlook.com"}
]
keywords = ["github", "homepage", "personal-site", "rss", "portfolio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "feedparser>=6.0.0",
    "requests>=2.28.0",
    "colorthief>=0.2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/none-ai/openhome"
Repository = "https://github.com/none-ai/openhome"
Issues = "https://github.com/none-ai/openhome/issues"

[project.scripts]
openhome = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openhome*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
